user management and config completed

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=C:\\Users\\Ruvindu\\Documents\\NetBeansProjects\\InfinityCom\\src\\lib\\jcalendar-1.4.jar
+file.reference.rs2xml.jar=C:\\Users\\Ruvindu\\Documents\\NetBeansProjects\\InfinityCom\\src\\lib\\rs2xml.jar
 user.properties.file=C:\\Users\\Ruvindu\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
