--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/InfinityCom.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.barcode4j.jar=src\\lib\\barcode4j.jar
+file.reference.itextpdf-5.4.0.jar=src\\lib\\itextpdf-5.4.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Ruvindu\\Desktop\\jcalendar-1.4.jar
 file.reference.rs2xml.jar=C:\\Users\\Ruvindu\\Desktop\\rs2xml.jar
 includes=**
@@ -34,7 +36,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.barcode4j.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
